Fix annoying horizontal overflow on mobile

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -86,6 +86,7 @@ header {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  overflow-x: hidden;
 }
 
 header .title {
